<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>dev.ekhart</groupId>
    <artifactId>hz-demo-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>hz-demo-parent</name>
    <description>Hazelcast demo multi-module build</description>

    <modules>
        <module>hz-demo-models</module>
        <module>hz-demo-cache-service</module>
        <module>hz-demo-client</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <lombok.version>1.18.46</lombok.version>
        <native.access.jvm.arg></native.access.jvm.arg>
        <testcontainers.version>1.21.4</testcontainers.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>${native.access.jvm.arg}</argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>java-24plus-native-access</id>
            <activation>
                <jdk>[24,)</jdk>
            </activation>
            <properties>
                <native.access.jvm.arg>--enable-native-access=ALL-UNNAMED</native.access.jvm.arg>
            </properties>
        </profile>
    </profiles>
</project>
